feat: import intention agent in director

--- a/app/src/static/directing.html
+++ b/app/src/static/directing.html
@@ -199,7 +199,8 @@
         }
 
         .do-it-btn:hover {
-            background-color: #003cff;
+            background-color: #001d7c;
+            border: 1px solid #001d7c;
             transform: translateY(-2px);
             box-shadow: 0 2px 8px rgba(74, 111, 165, 0.2);
         }
@@ -288,8 +289,8 @@
             border-bottom-left-radius: 5px;
             margin-bottom: 10px;
             width: fit-content;
-            font-weight: 300;
-            font-size: 14px;
+            font-weight: 600;
+            font-size: 15px;
         }
 
         .typing-indicator span {
