chore: change static files hierach

--- a/app/src/static/html/login.html
+++ b/app/src/static/html/login.html
@@ -182,7 +182,7 @@
         <h1>로그인</h1>
 
         <button id="google-login" class="login-button">
-            <img src="/google-icon-48.png" alt="Google Icon" />
+            <img src="/img/google-icon-48.png" alt="Google Icon" />
             <span>Google 계정으로 로그인</span>
         </button>
 
