--- a/app/src/static/html/playing.html
+++ b/app/src/static/html/playing.html
@@ -671,7 +671,7 @@
                 {
                     id: 1,
                     title: "Make your own scenario",
-                    src: "/placeholder.jpg",
+                    src: "/img/placeholder.jpg",
                     description: ""
                 }
             ];
